# chemsema

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CITATION.cff  CITING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  f1.cdxml  f2.cdxml  figure1.cdxml  figure2.cdxml  package-lock.json  package.json
apps/chemcore-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/chemcore-desktop/src-tauri/icons/: icon.icns
apps/chemcore-desktop/src-tauri/installer/: office-registration.nsh
apps/chemcore-desktop/src-tauri/resources/: chemcore-agent-guide.md  chemcore-entrypoints.json
apps/chemcore-desktop/src-tauri/src/: desktop_emf.rs  lib.rs  main.rs  menus.rs  paths.rs  window_helpers.rs
apps/chemcore-office/: Cargo.toml
apps/chemcore-office/src/: main.rs  windows_office.rs
apps/chemcore-office/src/windows_office/: constants.rs  emf_preview.rs
apps/chemsema-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/chemsema-desktop/src-tauri/icons/: icon.icns
apps/chemsema-desktop/src-tauri/installer/: office-registration.nsh
apps/chemsema-desktop/src-tauri/resources/: chemsema-agent-guide.md  chemsema-entrypoints.json
apps/chemsema-desktop/src-tauri/src/: desktop_emf.rs  lib.rs  main.rs  menus.rs  paths.rs  window_helpers.rs
cpp/chemcore_glyph_kernel/: CMakeLists.txt
cpp/chemcore_glyph_kernel/include/chemcore/: glyph_kernel.h  glyph_kernel.hpp
cpp/chemcore_glyph_kernel/src/: glyph_kernel.cpp  glyph_kernel_c_api.cpp
cpp/chemcore_glyph_kernel/tests/: glyph_kernel_smoke.cpp
cpp/chemcore_glyph_kernel/tools/: chemcore_glyph_demo.cpp  chemcore_glyph_svg_demo.cpp
crates/chemcore-cli/: Cargo.toml
crates/chemcore-cli/src/: main.rs  protocol.rs
crates/chemcore-cli/src/agent/: bundle.rs  capture.rs  clipboard.rs  context.rs  diff.rs  mod.rs  output.rs  session.rs  target.rs  tests.rs  transaction.rs
crates/chemcore-desktop-service/: Cargo.toml
crates/chemcore-desktop-service/src/: document_io.rs  file_format.rs  lib.rs  recent_files.rs  render_bounds.rs  tool_parsing.rs
crates/chemcore-engine/: Cargo.toml
crates/chemcore-engine/examples/: cdx_to_cdxml.rs  cdxml_label_gap_metrics.rs  cdxml_render_metrics.rs  cdxml_to_clipboard_payload.rs  cdxml_to_desktop_clipboard_payload.rs  cdxml_to_svg.rs  dump_graphic_primitives.rs  dump_text_primitives.rs  glyph_preview.rs  inspect_label_center.rs  render_role_report.rs
crates/chemcore-engine/src/: abbreviation.rs  cdx.rs  cdxml.rs  document.rs  editing.rs  engine.rs  geometry.rs  glyph_kernel.rs  label_rules.rs  legacy_mol.rs  lib.rs  render.rs  render_bonds.rs  render_constants.rs  render_contact.rs  render_legacy.rs  render_objects.rs  render_primitives.rs  render_svg.rs  repeating_units.rs  sdf.rs  symbols.rs  units.rs  wasm.rs
crates/chemcore-engine/src/abbreviation/: expansion.rs  valence.rs
crates/chemcore-engine/src/cdxml/: colors.rs  export.rs  import_objects.rs  text_runs.rs  xml.rs
crates/chemcore-engine/src/editing/: anchors.rs  arrows.rs  geometry.rs  hit_testing.rs
crates/chemcore-engine/src/engine/: arrows.rs  bond_styles.rs  bond_tools.rs  bounds.rs  brackets.rs  clipboard.rs  command.rs  context_menu.rs  context_styles.rs  delete.rs  groups.rs  links.rs  orbitals.rs  presets.rs  select.rs  selection_summary.rs  shapes.rs  symbol_tools.rs  templates.rs  text_edit.rs
crates/chemcore-engine/src/render/: arrow_geometry.rs  bond_geometry.rs  bond_metrics.rs  bounds.rs  labels.rs  style_payload.rs  text_utils.rs
crates/chemcore-engine/src/render_objects/: arrows.rs  graphics.rs  text.rs
crates/chemcore-engine/tests/: bond_tool.rs  command_engine.rs  palette_payloads.rs  render_document.rs  special_objects.rs  text_tool.rs
crates/chemcore-engine/tests/support/: mod.rs
crates/chemsema-chemistry/: Cargo.toml
crates/chemsema-chemistry/src/: canonical.rs  cip.rs  layout.rs  lib.rs  model.rs  molfile.rs  properties.rs  sanitize.rs  smiles.rs
crates/chemsema-cli/: Cargo.toml
crates/chemsema-cli/src/: main.rs  protocol.rs
crates/chemsema-cli/src/agent/: bundle.rs  capture.rs  clipboard.rs  context.rs  detail.rs  diff.rs  mod.rs  output.rs  session.rs  target.rs  targets.rs  tests.rs  transaction.rs
crates/chemsema-desktop-service/: Cargo.toml
crates/chemsema-desktop-service/src/: document_io.rs  file_format.rs  lib.rs  recent_files.rs  render_bounds.rs  tool_parsing.rs
crates/chemsema-engine/: Cargo.toml  build.rs
crates/chemsema-engine/examples/: cdx_to_cdxml.rs  cdxml_label_gap_metrics.rs  cdxml_render_metrics.rs  cdxml_to_clipboard_payload.rs  cdxml_to_desktop_clipboard_payload.rs  cdxml_to_svg.rs  dump_graphic_primitives.rs  dump_text_primitives.rs  glyph_preview.rs  inspect_label_center.rs  render_role_report.rs
crates/chemsema-engine/src/: cdx.rs  cdxml.rs  document.rs  editing.rs  engine.rs  geometry.rs  glyph_kernel.rs  label_rules.rs  lib.rs  object_kind.rs  render.rs  render_bonds.rs  render_constants.rs  render_contact.rs  render_legacy.rs  render_objects.rs  render_primitives.rs  render_svg.rs  repeating_units.rs  sdf.rs  symbols.rs  tool_parsing.rs  units.rs  wasm.rs
crates/chemsema-engine/src/abbreviation/: expansion.rs
crates/chemsema-engine/src/cdx/: decode.rs  encode.rs  enums.rs  interchange.rs  schema.rs  text_tables.rs  utils.rs
crates/chemsema-engine/src/cdxml/: export.rs  import_bonds.rs  import_brackets.rs  import_defaults.rs  import_fragments.rs  import_graphics.rs  import_groups.rs  import_images.rs  import_lines.rs  import_nodes.rs  import_objects.rs  import_scaling.rs  import_text.rs  import_topology.rs  line_spacing.rs  parse_values.rs  text_runs.rs  xml.rs
crates/chemsema-engine/src/editing/: anchors.rs  arrows.rs  geometry.rs  (+1 more)
crates/chemsema-engine/tests/: bond_tool.rs  command_engine.rs  curve_objects.rs  image_objects.rs  palette_payloads.rs  render_document.rs  special_objects.rs  text_tool.rs
crates/chemsema-inchi/: Cargo.toml  build.rs
crates/chemsema-inchi/src/: lib.rs
(+711 files in other folders)
