[workspace]
members = [
  "crates/chemcore-engine",
  "crates/chemcore-cli",
  "crates/chemcore-desktop-service",
  "apps/chemcore-desktop/src-tauri",
  "apps/chemcore-office",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Jiajun Zhang"]
repository = "https://github.com/dreamlovesu32/chemcore"
homepage = "https://dreamlovesu32.github.io/chemcore/"
