[workspace]
members = [
  "crates/chemsema-engine",
  "crates/chemsema-cli",
  "crates/chemsema-desktop-service",
  "apps/chemsema-desktop/src-tauri",
  "apps/chemsema-office",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Jiajun Zhang"]
repository = "https://github.com/dreamlovesu32/chemsema"
homepage = "https://dreamlovesu32.github.io/chemsema/"
