[package]
name = "chemcore-office"
version = "1.0.0-beta.5"
description = "ChemCore Windows Office/OLE integration server"
authors = ["Jiajun Zhang"]
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chemcore-engine = { path = "../../crates/chemcore-engine" }
resvg = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.11"
usvg = "0.45"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Graphics_GdiPlus",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
zip = { version = "2", default-features = false }
