[package]
name = "chemcore-cli"
version = "1.0.0-beta.5"
description = "Headless ChemCore command-line tools for document inspection, conversion, export, and command scripts."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chemcore-desktop-service = { path = "../chemcore-desktop-service" }
chemcore-engine = { path = "../chemcore-engine" }
fontdb = "0.23"
resvg = "0.45"
serde_json = "1.0"
sha2 = "0.10"
tiny-skia = "0.11"
usvg = "0.45"
