[package]
name = "chemcore-desktop-service"
version = "1.0.0-beta.5"
description = "Native desktop document service for ChemCore file, preview, and engine sessions."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chemcore-engine = { path = "../chemcore-engine" }
dirs = "6.0"
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
