[package]
name = "chemcore-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
quick-xml = "0.39.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
