[package]
name = "chemsema-chemistry"
version = "1.0.0-beta.1"
description = "ChemSema-owned chemical graph, SMILES, and 2D structure algorithms."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
