[package]
name = "chemsema-cli"
version = "1.0.0-beta.1"
description = "Headless ChemSema command-line tools for document inspection, conversion, export, and command scripts."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chemsema-desktop-service = { path = "../chemsema-desktop-service" }
chemsema-engine = { path = "../chemsema-engine" }
chemsema-office = { path = "../../apps/chemsema-office" }
fontdb = "0.23"
resvg = "0.45"
serde_json = "1.0"
sha2 = "0.10"
tiny-skia = "0.11"
usvg = "0.45"
