[package]
name = "chemsema-engine"
version = "1.0.0-beta.1"
description = "Shared Rust engine for ChemSema chemical documents, editing, rendering, and import/export."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
quick-xml = "0.39.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
