[package]
name = "chemsema-inchi"
version = "1.0.0-beta.1"
description = "Safe Rust boundary for the official IUPAC InChI library."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
links = "inchi"
build = "build.rs"

[build-dependencies]
cc = "1.2"
