[package]
name = "chemsema-desktop"
version = "1.0.0-beta.1"
description = "ChemSema Windows desktop application"
authors = ["Jiajun Zhang"]
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chemsema_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
chemsema-desktop-service = { path = "../../../crates/chemsema-desktop-service" }
chemsema-office = { path = "../../chemsema-office" }
base64 = "0.22"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }

[dev-dependencies]
chemsema-engine = { path = "../../../crates/chemsema-engine" }
